# kattis

./: .gitignore  .pylintrc  README.md  marimo.toml  pyproject.toml  quick_fixes.py
.github/workflows/: tests.yml
notebooks/: different_notebook.py  game_2048_notebook.py  hissingmicrophone_notebook.py  lvable_notebook.py  monopol_notebook.py  oddecho_notebook.py  printed_statues_notebook.py  thirteen_floors_notebook.py  three_puzzle_notebook.py
src/kattis/: acappellarecording.py  different.py  game_2048.py  hissingmicrophone.py  lvable.py  monopol.py  oddecho.py  printed_statues.py  thirteen_floors.py  three_puzzle.py
tests/: test_acapellarecording.py  test_different.py  test_game_2048.py  test_hissingmicrophone.py  test_lvable.py  test_monopol.py  test_oddecho.py  test_printed_statues.py  test_thirteen_floors.py  test_three_puzzle.py
