[project]
name = "kattis"
version = "0.1.0"
description = ""
authors = [
    {name = "jeangnamien",email = "jean.gnamien@master.centralelille.fr"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "kattis", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.1,<10.0.0"
coverage = ">=7.12.0,<8.0.0"
pylint = "^4.0.3"
black = "^25.11.0"

